test/parallel/taskPar/vass/taskintents-inout-error.good
taskintents-inout-error.chpl:3: syntax error: near 'inout'
